cmake_minimum_required(VERSION 3.28)
project(LinkedList)

set(CMAKE_CXX_STANDARD 17)

add_executable(D_D main.cpp
        Monster.cpp
        Monster.h
        Node.cpp
        Node.h
        LinkedList.cpp
        LinkedList.h
        Powers.cpp
        Powers.h
        Player.cpp
        Player.h
        Inventory.cpp
        Inventory.h
        HashTable.cpp
        HashTable.h
        Dice.h
        Dice.cpp
        Graph.h
        Graph.cpp)
